--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
 
 <body>
 
-    <div id="breed">
-
-    </div>
-
-
-
-
-
-
-
-
+    <div id="breed"> </div>
     <script src="app.js"></script>
 </body>
 
