--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Infinite Dog App</title>
 </head>
 
 <body>
-
-    <div id="breed"> </div>
+    <div class="app">
+        <div class="header">
+            <h1>Infinite Dog App</h1>
+            <div id="breed" class="breed"> </div>
+        </div>
+        <div class="slideshow">
+            <div class="slide"></div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
